package ch.zucchinit.zauction.Auth;

import ch.zucchinit.zauction.Exceptions.ExceptionsDTO;
import ch.zucchinit.zauction.Exceptions.ResourceNotFound;
import ch.zucchinit.zauction.Exceptions.ValidationError;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
import org.springframework.stereotype.Service;

import java.util.List;
import java.util.Optional;

import static ch.zucchinit.zauction.Utils.FieldUpdater.updateIfChanged;

@Service
public class UserService {
    private final UserRepository userRepository;
    private final BCryptPasswordEncoder passwordEncoder;

    public UserService(UserRepository userRepository) {
        this.userRepository = userRepository;
        this.passwordEncoder = new BCryptPasswordEncoder();
    }

    public User getUserFromContext() {
        Long id = ((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getId();
        return userRepository.findById(id).orElseThrow(ResourceNotFound::new);
    }

    public User findUserByEmailAndPassword(String email, String password) {
        Optional<User> user = userRepository.findByEmail(email);
        if (user.isEmpty() || !passwordEncoder.matches(password, user.get().getPassword())) throw new ResourceNotFound();

        return user.get();
    }

    public User createUser(AuthDTO.UserRegister userRegister) {
        if (userRepository.existsByEmail(userRegister.email())) {
            ExceptionsDTO.ValidationError error = new ExceptionsDTO.ValidationError(List.of("email"), "Cet email est déjà utilisé");
            throw new ValidationError(List.of(error));
        }

        String hashedPassword = passwordEncoder.encode(userRegister.password());

        return userRepository.save(
                new User(userRegister.firstName(), userRegister.lastName(), userRegister.email(), hashedPassword)
        );
    }

    public AuthDTO.UserAccount updateUser(AuthDTO.UserAccount userAccount) {
        User user = getUserFromContext();

        updateIfChanged(user::getFirstName, user::setFirstName, userAccount.firstName());
        updateIfChanged(user::getLastName, user::setLastName, userAccount.lastName());
        updateIfChanged(user::getPhone, user::setPhone, userAccount.phone());
        updateIfChanged(user::getAddress, user::setAddress, userAccount.address());
        updateIfChanged(user::getCity, user::setCity, userAccount.city());
        updateIfChanged(user::getZipCode, user::setZipCode, userAccount.zipCode());

        userRepository.save(user);
        return userAccount;
    }

    public void resetPassword(AuthDTO.UserResetPassword userResetPassword) {
        User user = getUserFromContext();

        if (!passwordEncoder.matches(userResetPassword.oldPassword(), user.getPassword())) throw new ResourceNotFound();
        user.setPassword(passwordEncoder.encode(userResetPassword.newPassword()));
        userRepository.save(user);
    }
}
