@startuml

package ch.zucchinit.zauction {

    class SpringApplication
    class ZAuctionApplication {
        +main(String[]): void
    }
    ZAuctionApplication --> SpringApplication

    class APIConfiguration {
        -corsOrigin: String[]
        -apiHeader: String[]
        -apiSecret: String
        -cookieValidity: Integer
        -cookieName: String
    }

    package Auth {
        interface UserRepository {
            findByEmail(String email): Optional<User>
            existsByEmail(String email): boolean
        }
        interface TokenRepository {
            deleteByExpireDateBefore(LocalDateTime date): void
        }
        class AuthDTO
        class AuthController {
            -userService: UserService
            -tokenService: TokenService
            +register(HttpServletResponse response, AuthDTO.UserRegister register): AuthDTO.UserProfile
            +login(HttpServletResponse response, AuthDTO.UserLogin login): AuthDTO.UserProfile
            +unregister(HttpServletResponse response): void
            +me(): AuthDTO.UserProfile
            +getAccount(): AuthDTO.UserAccount
            +updateAccount(AuthDTO.UserAccount userAccount): AuthDTO.UserAccount
            +resetPassword(AuthDTO.UserResetPassword userResetPassword): void
        }
        class UserService {
            -userRepository: UserRepository
            -passwordEncoder: BCryptPasswordEncoder
            +getUserFromContext(): User
            +findUserByEmailAndPassword(String email, String password): User
            +createUser(AuthDTO.UserRegister register): User
            +updateUser(AuthDTO.UserAccount userAccount): AuthDTO.UserAccount
            +resetPassword(AuthDTO.UserResetPassword userResetPassword): void
        }
        class TokenService {
            -apiConfiguration: APIConfiguration
            -tokenRepository: TokenRepository
            +getCookieToken(String tokenValue): Cookie
            +extractCookieToken(Cookie[] cookies): Cookie
            +deleteCookieToken(): Cookie
            +registerToken(User user): void
            +findTokenById(String tokenValue): Token
            +unregisterToken(Token token): void
            +purgeExpiredTokens(): void
        }

        AuthController --> UserService
        AuthController --> TokenService
        AuthController --> AuthDTO
        UserService --> UserRepository
        UserService --> AuthDTO
        TokenService --> TokenRepository
        TokenService --> APIConfiguration
    }

    package Category {
        interface CategoryRepository {
            findByParentIsNull(): Category[]
        }
        class CategoryController {
            -categoryService: CategoryService
            +all(): Category[]
        }
        class CategoryService {
            -categoryRepository: CategoryRepository
            +findAll(): Category[]
            +getChildIds(Category category, Long ids[]): Long[]
            +getReverseCategories(Long categoryId): Category[]
        }

        CategoryController --> CategoryService
        CategoryService --> CategoryRepository
    }

    package Lot {
        interface LotRepository
        class LotDTO
        class LotController {
            -lotService: LotService
            +paginate(Integer page, Integer take, Category category, String search): LotDTO.LotPaginatedThumbnail
            +one(Long id): LotDTO.LotDetails
            +auctionsPerPeriod(Long id, String period): AuctionDTO.AuctionPrice[]
            +requestAuction(Long id, AuctionDTO.AuctionRequest auctionRequest): AuctionDTO.AuctionResponse
        }
        class LotService {
            -lotRepository: LotRepository
            -categoryService: CategoryService
            -auctionService: AuctionService
            -userService: UserService
            +findByPageWithCategoryAndSearch(Integer page, Integer take, Category category, String search): LotDTO.LotPaginatedThumbnail
            +findById(Long id): Lot
            +getLotDetails(Lot lot): LotDTO.LotDetails
        }
        class LotSpecifications {
            {static}isFinished(): Specification<Lot>
            {static}hasCategoryId(Long id): Specification<Lot>
            {static}multiFieldSearch(String keyword): Specification<Lot>
        }

        LotController --> LotService
        LotController --> LotDTO
        LotService --> LotRepository
        LotService --> LotDTO
        LotService --> LotSpecifications
        LotService --> CategoryService
        LotService --> AuctionService
        LotService --> UserService
    }

    package Auction {
        interface AuctionRepository {
            findByLotAndDateAfterOrderByDateDesc(Lot lot, LocalDateTime date): Auction[]
        }
        class AuctionDTO {
            class AuctionRequest
            class AuctionResponse
            class AuctionPrice
            class TimePeriod
        }
        class AuctionService {
            -auctionRepository: AuctionRepository
            -userService: UserService
            +createAuction(Lot lot, AuctionDTO.AuctionRequest): AuctionDTO.AuctionResponse
            +findAuctionsByPeriod(Lot lot, AuctionDTO.TimePeriod period): AuctionDTO.AuctionPrice[]
            -getPeriodKey(AuctionDTO.TimePeriod timePeriod): LocalDateTime
        }

        AuctionService --> AuctionRepository
        AuctionService --> AuctionDTO
        AuctionService --> UserService
    }

    package Exceptions {
        exception ResourceNotFound
        exception NotAuthorized
        class ExceptionsDTO
        class ExceptionsAdvice {
            +userNotAuthorizedHandler(): void
            +resourceNotFoundHandler(): void
            +validationErrorHandler(ValidationError ex): ExceptionsDTO.ValidationError[]
            +springValidationErrorHandler(MethodArgumentNotValidException ex): ExceptionsDTO.ValidationError[]
            +handleMissingServletRequestParameter(MissingServletRequestParameterException ex): ExceptionsDTO.ValidationError[]
        }

        ExceptionsAdvice --> ResourceNotFound
        ExceptionsAdvice --> NotAuthorized
        ExceptionsAdvice --> ExceptionsDTO
        ExceptionsAdvice --> ExceptionsDTO.ValidationError
    }

    package Security {
        class SecurityConfig {
            -corsConfigurationSource: CorsConfigurationSource
            +securityFilterChain: SecurityFilterChain
        }
        class UserAuthTokenFilter {
            -tokenService: TokenService
            #doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain): void
        }
        class APIBaseTokenFilter {
            -API_HEADER: String
            -API_SECRET: String
            #doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain): void
        }

        SecurityConfig --> UserAuthTokenFilter
        SecurityConfig --> APIBaseTokenFilter
        SecurityConfig --> APIConfiguration
        UserAuthTokenFilter --> TokenService
    }

    package Utils {
        class FieldUpdater {
            {static}updateIfChanged<T>(Supplier<T> getter, Consumer<T> setter, T value): void
        }
        class S3Connector {
            -s3client: s3Client
            +uploadMedias(Long id)
            +getUrls(Long id): String[]
        }
        note top: not used yet
    }

    Auth.UserService --> Utils.FieldUpdater
    Lot.LotController --> Auction.AuctionDTO
    Lot.LotService --> Category.CategoryService
    Lot.LotService --> Auction.AuctionService
    Lot.LotService --> Auth.UserService
}

@enduml
